@@ -7,9 +7,18 @@ You are viewing the documentation for the new actor APIs, to view the Akka Class
 
 ## Module info
 
+The Akka dependencies are available from Akka's library repository. To access them there, you need to configure the URL for this repository.
+
+@@repository [sbt,Maven,Gradle] {
+id="akka-repository"
+name="Akka library repository"
+url="https://repo.akka.io/maven"
+}
+
 To use Akka Cluster Distributed Data, you must add the following dependency in your project:
 
 @@dependency[sbt,Maven,Gradle] {
+  bomGroup=com.typesafe.akka bomArtifact=akka-bom_$scala.binary.version$ bomVersionSymbols=AkkaVersion
   symbol1=AkkaVersion
   value1="$akka.version$"
   group=com.typesafe.akka
@@ -175,6 +184,10 @@ configurable `akka.cluster.distributed-data.notify-subscribers-interval`.
 The subscriber is automatically unsubscribed if the subscriber is terminated. A subscriber can
 also be de-registered with the `replicatorAdapter.unsubscribe(key)` function.
 
+In addition to subscribing to individual keys it is possible to subscribe to all keys with a given prefix
+by using a `*` at the end of the key `id`. For example `GCounterKey("counter-*")`. Notifications will be
+sent for all matching keys, also new keys added later.
+
 ### Delete
 
 A data entry can be deleted by sending a `Replicator.Delete` message to the local
@@ -189,16 +202,47 @@ A deleted key cannot be reused again, but it is still recommended to delete unus
 data entries because that reduces the replication overhead when new nodes join the cluster.
 Subsequent `Delete`, `Update` and `Get` requests will be replied with `Replicator.DataDeleted`.
 Subscribers will receive `Replicator.Deleted`.
+
+The @ref:[automatic expiry](#expire) is an alternative for removing unused data entries.
  
 @@@ warning
 
 As deleted keys continue to be included in the stored data on each node as well as in gossip
 messages, a continuous series of updates and deletes of top-level entities will result in
 growing memory usage until an ActorSystem runs out of memory. To use Akka Distributed Data
-where frequent adds and removes are required, you should use a fixed number of top-level data
-types that support both updates and removals, for example `ORMap` or `ORSet`.
+where frequent adds and removes are required, you should use @ref:[automatic expiry](#expire) 
+or a fixed number of top-level data types that support both updates and removals, for example `ORMap` or `ORSet`.
 
 @@@
+
+### Expire
+
+A data entry can automatically be removed after a period of inactivity, i.e. when there has been no access of
+the entry with `Get`, `Update` or `Delete`.
+
+Expiry is enabled for configured keys:
+
+```
+akka.cluster.distributed-data.expire-keys-after-inactivity {
+ "key-1" = 10 minutes
+ "cache-*" = 2 minutes
+}
+```
+
+Prefix matching is supported by using `*` at the end of a key.
+
+Expiry can be enabled for all entries by specifying:
+
+```
+akka.cluster.distributed-data.expire-keys-after-inactivity {
+  "*" = 10 minutes
+}
+```
+
+Subscribers will receive `Replicator.Expired` when an entry has expired.
+
+Expired entries are completely removed and does not leave any tombstones as is the case for @ref:[Delete](#delete). 
+Expired keys can be reused again. Also @ref:[deleted](#delete) entries can be expired and then completely removed.
 
 ### Consistency
 
@@ -228,9 +272,10 @@ at least **N/2 + 1** replicas, where N is the number of nodes in the cluster
 (or cluster role group)
  * `WriteMajorityPlus` is like `WriteMajority` but with the given number of `additional` nodes added
    to the majority count. At most all nodes. This gives better tolerance for membership changes between
-   writes and reads.
- * `WriteAll` the value will immediately be written to all nodes in the cluster
-(or all nodes in the cluster role group)
+   writes and reads. Exiting nodes are excluded using `WriteMajorityPlus` because those are typically about to be removed
+   and will not be able to respond.
+ * `WriteAll` the value will immediately be written to all nodes in the cluster (or all nodes in the cluster role group).
+   Exiting nodes are excluded using `WriteAll` because those are typically about to be removed and will not be able to respond.
 
 When you specify to write to `n` out of `x`  nodes, the update will first replicate to `n` nodes.
 If there are not enough Acks after a 1/5th of the timeout, the update will be replicated to `n` other
@@ -262,9 +307,10 @@ at least **N/2 + 1** replicas, where N is the number of nodes in the cluster
 (or cluster role group)
 * `ReadMajorityPlus` is like `ReadMajority` but with the given number of `additional` nodes added
    to the majority count. At most all nodes. This gives better tolerance for membership changes between
-   writes and reads.
- * `ReadAll` the value will be read and merged from all nodes in the cluster
-(or all nodes in the cluster role group)
+   writes and reads. Exiting nodes are excluded using `ReadMajorityPlus` because those are typically about to be
+  removed and will not be able to respond.
+ * `ReadAll` the value will be read and merged from all nodes in the cluster (or all nodes in the cluster role group).
+   Exiting nodes are excluded using `ReadAll` because those are typically about to be removed and will not be able to respond.
 
 Note that `ReadMajority` and `ReadMajorityPlus` have a `minCap` parameter that is useful to specify to achieve
 better safety for small clusters.
@@ -277,7 +323,7 @@ throws an exception, or if it fails to persist to @ref:[durable storage](#durabl
 
 #### Examples
 
-In a 7 node cluster this these consistency properties are achieved by writing to 4 nodes
+In a 7 node cluster these consistency properties are achieved by writing to 4 nodes
 and reading from 4 nodes, or writing to 5 nodes and reading from 3 nodes.
 
 By combining `WriteMajority` and `ReadMajority` levels a read always reflects the most recent write.
@@ -672,6 +718,12 @@ possible to replace that with another implementation by implementing the actor p
 `akka.cluster.ddata.DurableStore` and defining the `akka.cluster.distributed-data.durable.store-actor-class`
 property for the new implementation.
 
+@@@ note { title="Java 17" }
+
+When using LMDB with Java 17 you have to add JVM flags `--add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED`.
+
+@@@
+
 The location of the files for the data is configured with:
 
 Scala
@@ -723,7 +775,7 @@ There is one important caveat when it comes pruning of @ref:[CRDT Garbage](#crdt
 If an old data entry that was never pruned is injected and merged with existing data after
 that the pruning markers have been removed the value will not be correct. The time-to-live
 of the markers is defined by configuration
-`akka.cluster.distributed-data.durable.remove-pruning-marker-after` and is in the magnitude of days.
+`akka.cluster.distributed-data.durable.pruning-marker-time-to-live` and is in the magnitude of days.
 This would be possible if a node with durable data didn't participate in the pruning
 (e.g. it was shutdown) and later started after this time. A node with durable data should not
 be stopped for longer time than this duration and if it is joining again after this
@@ -776,8 +828,8 @@ The `DistributedData` extension can be configured with the following properties:
 
 ## Example project
 
-@java[@extref[Distributed Data example project](samples:akka-samples-distributed-data-java)]
-@scala[@extref[Distributed Data example project](samples:akka-samples-distributed-data-scala)]
+@java[[Distributed Data example project](../attachments/akka-sample-distributed-data-java.zip)]
+@scala[[Distributed Data example project](../attachments/akka-sample-distributed-data-scala.zip)]
 is an example project that can be downloaded, and with instructions of how to run.
 
 This project contains several samples illustrating how to use Distributed Data.
